force-app/main/default/objects/Facility_Room_Rate__c/Facility_Room_Rate__c.object-meta.xml
<CustomObject>
    <description>Room-type pricing per healthcare facility (demo / informational).</description>
    <label>Facility Room Rate</label>
    <nameField>
        <displayFormat>FRR-{00000}</displayFormat>
        <label>Facility Room Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Room Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>