force-app/main/default/objects/Facility_Room_Rate__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <description>Rate valid from.</description>
    <label>Effective From</label>
    <type>Date</type>
</CustomField>