force-app/main/default/objects/Facility_Room_Rate__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <description>Rate valid until (blank = open-ended).</description>
    <label>Effective To</label>
    <type>Date</type>
</CustomField>