force-app/main/default/objects/Facility_Room_Rate__c/fields/Healthcare_Facility__c.field-meta.xml
<CustomField>
    <fullName>Healthcare_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Healthcare facility this rate applies to.</description>
    <label>Healthcare Facility</label>
    <referenceTo>HealthcareFacility</referenceTo>
    <relationshipLabel>Facility Room Rates</relationshipLabel>
    <relationshipName>Facility_Room_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>