force-app/main/default/objects/Facility_Room_Rate__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <description>Room category for pricing.</description>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <default>true</default>
                <label>General</label>
            </value>
            <value>
                <fullName>ICU</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Semi_Private</fullName>
                <label>Semi-private</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>